--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.hyunjung.sectionedrecyclerview'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.hyunjung.sectionedrecyclerview"
@@ -44,4 +44,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.activity:activity-ktx:1.8.2'
 }
